# nbdrift

./: .gitmodules  build.gradle.kts  gradle.properties  init_array_offset_finder.py  modify_manifest.py  patch_with_lief.py  replace_data.py  settings.gradle.kts  trueToastedCode-release-key.jks
.devcontainer/: Dockerfile  devcontainer.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  main.cpp  resourceguard.hpp
app/src/main/cpp/elf_img/: elf_img.cpp  elf_img.h  ulog.h
app/src/main/cpp/entrypoint_lib/: entrypoint_lib.cpp
app/src/main/cpp/find_init_array/: find_init_array.cpp  find_init_array.h
app/src/main/java/de/truetoastedcode/nbdrift/: EntryPoint.java  HookDeviceData.java  Hooker.java  NbHook.java  NbPermissionHook.java  SimpleStorageChecker.java  TypeResolver.java  Werkzeug.java
gradle/: libs.versions.toml
